trunk/Archive2/45/35e1de96d8877a/output
main.cpp: In function 'int main()':
main.cpp:95:23: error: no matching function for call to 'Signal<void(long unsigned int)>::connect()'
     sig.connect<test>();
                       ^
main.cpp:95:23: note: candidate is:
main.cpp:78:10: note: template<void (* fun_ptr)(long unsigned int)> void Signal<T_rv(Args ...)>::connect() [with T_rv (* fun_ptr)(Args ...) = fun_ptr; T_rv = void; Args = {long unsigned int}]
     void connect()
          ^
main.cpp:78:10: note:   template argument deduction/substitution failed:
main.cpp:95:23: error: could not convert template argument 'test' to 'void (*)(long unsigned int)'
     sig.connect<test>();
                       ^
